added html to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,11 @@
   <!-- endbuild -->
 </head>
 <body>
-  <script>
-    window.App = requireModule('appkit/app');
-  </script>
+  <div class="container">
+    <script>
+      window.App = requireModule('appkit/app');
+    </script> 
+  </div>
+  
 </body>
 </html>
